--- a/music-quiz/index.html
+++ b/music-quiz/index.html
@@ -1,1 +1,68 @@
-Hello World
+<!DOCTYPE html>
+<html>
+
+<body>
+  <iframe src="https://cross-origin.com/myvideo.html" allow="autoplay"></iframe>
+  <!-- 1. The <iframe> (and video player) will replace this <div> tag. -->
+  <div id="player"></div>
+
+  <script>
+    // 2. This code loads the IFrame Player API code asynchronously.
+    var tag = document.createElement('script');
+
+    tag.src = "https://www.youtube.com/iframe_api";
+    var firstScriptTag = document.getElementsByTagName('script')[0];
+    firstScriptTag.parentNode.insertBefore(tag, firstScriptTag);
+
+    // 3. This function creates an <iframe> (and YouTube player)
+    //    after the API code downloads.
+    var player;
+    function onYouTubeIframeAPIReady() {
+      player = new YT.Player('player', {
+        height: '390',
+        width: '640',
+        //videoId: 'M7lc1UVf-VE',
+        playerVars: {
+          'listType': 'playlist',
+          'list': 'PLmra5-9c6QitTCQcJ0uqibBj6MLJCEa3q',
+          'autoplay': 1, // Auto-play the video on load
+          'playsinline': 1,
+          'controls': 1, // Show pause/play buttons in player
+          'showinfo': 1, // Hide the video title
+          'modestbranding': 0, // Hide the Youtube Logo'
+          'cc_load_policy': 0, // Hide closed captions
+          'iv_load_policy': 3, // Hide the Video Annotations
+          'playsinline': 1
+          //'start': 0,
+          //'end': 5
+          //autohide: 0,
+        },
+        events: {
+          'onReady': onPlayerReady,
+          'onStateChange': onPlayerStateChange
+        }
+      });
+    }
+
+    // 4. The API will call this function when the video player is ready.
+    function onPlayerReady(event) {
+      event.target.playVideo();
+    }
+
+    // 5. The API calls this function when the player's state changes.
+    //    The function indicates that when playing a video (state=1),
+    //    the player should play for six seconds and then stop.
+    var done = false;
+    function onPlayerStateChange(event) {
+      if (event.data == YT.PlayerState.PLAYING && !done) {
+        //setTimeout(stopVideo, 6000);
+        //done = true;
+      }
+    }
+    function stopVideo() {
+      player.stopVideo();
+    }
+  </script>
+</body>
+
+</html>
