Add placeholder text to playlist id

--- a/music-quiz/index.html
+++ b/music-quiz/index.html
@@ -148,7 +148,7 @@
     value="15">
   <input type="button" class="button" id="setVidTimeLeftButton" value="Set" onclick="setVidSeconds()">
   <br>
-  YT Playlist ID: <input type="text" id="playlistIdText" value="PL5fOd3WJHcsMocmKF-L5vszbjkYHZByWc" size="50">
+  YT Playlist ID: <input type="text" id="playlistIdText" placeholder="the value after 'list=' (e.g.PLmra5-9c6QitTCQcJ0uqibBj6MLJCEa3q)" size="53">
   <input type="button" class="button" id="setPlaylistButton" value="Load playlist" onclick="setPlaylist()">
   <br><br>
   <input type="button" class="button" id="canButton" value="can" onclick="loadCan()"><br>
