clean up error message

--- a/music-quiz/index.html
+++ b/music-quiz/index.html
@@ -310,7 +310,7 @@
       var playlistId = document.getElementById('playlistIdText').value;
 
       if (!playlistId) {
-        document.getElementById('errorMessage').innerHTML = 'ERROR: Playlist needs to be loaded first';
+        document.getElementById('errorMessage').innerHTML = 'ERROR: Playlist ID is invalid';
         return;
       }
 
