very important update

--- a/music-quiz/index.html
+++ b/music-quiz/index.html
@@ -170,7 +170,7 @@
   <input type="button" class="button" id="canButton" value="can" onclick="loadCan()"><br>
   <input type="button" class="button" id="uselessButt" value="banan" onclick="loadBanan()"><br>
   <input type="button" class="button" id="preggersButton" value="PREGGERS" onclick="loadPreggers()"><br>
-  <input type="button" class="button" id="fridayButton" value="friday night" onclick="loadFridayNight()"><br>
+  <input type="button" class="button" id="fridayButton" value="friday night!" onclick="loadFridayNight()"><br>
 
   <script>
     var player;
