fix quiz not starting after loading playlist

--- a/music-quiz/index.html
+++ b/music-quiz/index.html
@@ -314,9 +314,8 @@
         return;
       }
 
-      clearMessagesAndFutures();
+      clearStateForNextVideo();
       setQuizStatusDisplay('Press Play to start the quiz!');
-
 
       setNewYtPlayer(playlistId);
     }
